--- a/arch/arm/boot/dts/fsimx6dl-efusa9.dts
+++ b/arch/arm/boot/dts/fsimx6dl-efusa9.dts
@@ -11,12 +11,25 @@
 // #define CONFIG_EFUSA9_REV110 // old board revision
 #define CONFIG_EFUSA9_REV121
 
+/* CONFIGURE 5V LVDS POWER SUPPLY */
+#ifdef CONFIG_EFUSA9_REV121
+/* With REV121 you can connect LVDS displays that need 5V.
+   Most displays run with 3.3V. Define the variable below to configure the
+   gpio used for switching to 5V. */
+//#define CONFIG_EFUSA9_5V_LVDS
+#endif
+
+
 /* ENABLE DISPLAYS */
 /* The following display config will be converted to Kconfig in the future */
 /* Define this if you have at least one display (D0) */
 #define CONFIG_EFUSA9_D0
 /* Define this if you have a second display (D1) */
 #define CONFIG_EFUSA9_D1
+
+/* ENABLE BACKLIGHT LEVELS */
+/* enable 16 levels of backlight brightness with correct gamma */
+#define CONFIG_EFUSA9_BL_LEVELS_16
 
 /* CONFIGURE DISPLAY 0 */
 #ifdef CONFIG_EFUSA9_D0
@@ -29,7 +42,7 @@
  * See the following files for possible values:
  *   LVDS: drivers/video/mxc/ldb.c
  *   LCD:  drivers/video/mxc/mxc_lcdif.c
- *   HDMI: drivers/video/mxc/mxc_hdmi.c (actually fetched from panel via EDID)
+ *   HDMI: drivers/video/fbdev/mxc/mxc_hdmi.c (actually fetched from panel via EDID)
  */
 #ifdef CONFIG_EFUSA9_D0_LCD
 	#define CONFIG_EFUSA9_D0_MODE_STR "LCD-ET070080"	// LCD
@@ -56,29 +69,26 @@
 #endif
 #endif // CONFIG_EFUSA9_D1
 
+/* CONFIGURE LVDS MULTIDISPLAY*/
+/* Two LVDS displays act as two independent displays (with two fb) by default.
+   Apart from this  can choose between dual-mode and split-mode */
+#if defined(CONFIG_EFUSA9_D0_LVDS) && defined(CONFIG_EFUSA9_D1_LVDS)
+/* one LVDS display per channel, one framebuffer for both */
+//#define CONFIG_EFUSA9_LVDS_DUAL_MODE
+/* two channels for 'split-mode-display', one framebuffer */
+//#define CONFIG_EFUSA9_LVDS_SPLIT_MODE
+#endif 
 
 /* Do some settings to make configurations easier */
 #if defined(CONFIG_EFUSA9_D0_LCD) || defined(CONFIG_EFUSA9_D1_LCD)
-#define CONFIG_EFUSA9_LCD
+#define CONFIG_EFUSA9_LCD // activates LCD node
 #endif
 #if defined(CONFIG_EFUSA9_D0_HDMI) || defined(CONFIG_EFUSA9_D1_HDMI)
-#define CONFIG_EFUSA9_HDMI
+#define CONFIG_EFUSA9_HDMI // activates HDMI node
 #endif
 
-#if defined(CONFIG_EFUSA9_D0_LVDS) || defined(CONFIG_EFUSA9_D1_LVDS) \
-	|| defined(CONFIG_EFUSA9_D2_LVDS)|| defined(CONFIG_EFUSA9_D3_LVDS)
-#define CONFIG_EFUSA9_LVDS
-#if defined(CONFIG_EFUSA9_D0_LVDS) && defined(CONFIG_EFUSA9_D1_LVDS)
-#define CONFIG_EFUSA9_LVDS_MODE "sep1"
-#else
-
-/* CONFIGURE LVDS MULTIDISPLAY*/
-/* Two displays are used on LVDS, choose one of the modes below*/
-//#define CONFIG_EFUSA9_LVDS_MODE "sin0"	// Single-channel on LVDS0
-#define CONFIG_EFUSA9_LVDS_MODE "sin1"		// Single-channel on LVDS1
-//#define CONFIG_EFUSA9_LVDS_MODE "dul1"	// Clone mode
-//#define CONFIG_EFUSA9_LVDS_MODE "spl1"	// Dual-channel LVDS
-#endif
+#if defined(CONFIG_EFUSA9_D0_LVDS) || defined(CONFIG_EFUSA9_D1_LVDS)
+#define CONFIG_EFUSA9_LVDS // activates LVDS node
 #endif
 
 /* HDMI */
@@ -86,6 +96,7 @@
 #define CONFIG_EFUSA9_HDMI_AUDIO
 #define CONFIG_EFUSA9_HDMI_CEC
 #endif
+
 
 /* TOUCH */
 /* Please select only one of the following touch devices. Make sure that the
@@ -155,20 +166,31 @@
 
 #ifdef CONFIG_EFUSA9_LVDS
 &ldb {
-	ipu_id = <0>;
-	sec_ipu_id = <0>;
-#ifdef CONFIG_EFUSA9_LCD
-	disp_id = <1>;
-	sec_disp_id = <0>;
+	ext_ref;
+#ifdef CONFIG_EFUSA9_LVDS_DUAL_MODE
+	 dual-mode;
+#endif 
+#ifdef CONFIG_EFUSA9_LVDS_SPLIT_MODE
+	split-mode;
+#endif 
+
+#ifdef CONFIG_EFUSA9_LCD		//if LCD is enabled too, LDB uses di1
 	lvds-channel@0 {
-		crtc = "ipu1-di1";
+		crtc = "ipu1-di1"; 	//ipu1-di1 means ipu 0, di1 
+		reg = <0>;
 		status = "okay";
 	};
 #else
-	disp_id = <0>;
-	sec_disp_id = <1>;
-	lvds-channel@0 {
+	lvds-channel@0 {		//default LVDS uses di0	
 		crtc = "ipu1-di0";
+		reg = <0>;
+		status = "okay";
+	};
+#endif 
+#ifdef CONFIG_EFUSA9_D1_LVDS		//if both LVDS channels are used, 
+	lvds-channel@1 {		//dual and split mode ignore this node
+		crtc = "ipu1-di1";
+		reg = <1>;
 		status = "okay";
 	};
 #endif
@@ -183,12 +205,12 @@
 };
 #endif
 #ifdef CONFIG_EFUSA9_D0
-&mxcfb1 {
+&mxcfb0 {
 	status = "okay";
 };
 #endif
 #ifdef CONFIG_EFUSA9_D1
-&mxcfb2 {
+&mxcfb1 {
 	status = "okay";
 };
 #endif
