Add device tree and improve defconfig for fsimx6 Solo/DualLite (armstonea9)
Makefile:
- add device tree fsimx6dl-armstonea9 to be build by fsimx6_defconfig
fsimx6_defconfig:
- CONFIG_I2C_GPIO: needed for sgtl5000 and HDMI
- CONFIG_SND_SOC_FSL_SSI: needed for sgtl5000
fsimx6dl-armstonea9 and fsimx6qdl-armstonea9:
    Device tree settings:
    - GPMI for NAND flash with F&S NAND driver and F&S APBH DMA driver
    - LCD with 800x480 resolution (WVGA)
    - LVDS with 800x480 resolution (WVGA)
    - HDMI and HDMI audio register access with i2c6(i2c_gpio_hdmi)
    - v4l2_out for video overlays
    - v4l2_cap_0 for parallel camera interface and
    v4l2_cap_1 for serial camera interface
    - Audio with SGTL5000 on SSI1, register access with I2C5 (i2c-gpio)
    - Ethernet: 1GBit/s via RGMII
    - Serial ports on UART1 (port B), UART2 (port A), UART3 (port C)
    - can2
    - USB Device and USB Host
    - USDHC3 for Micro-SD-Card
    - I2C1 (port C) ov5640 MIPI, ov9665
    - I2C3 (port B) with rtc8565
    - I2C3 (port A) with PCA9632 (LED driver), MXT224 (pcap touch),
    sx8654 (res. touch), FT5x06 (pcap touch)
    - ECSPI2 for user defined SPI (spidev)
    - User PWM on PWM1, PWM2 and PWM4
    - PWM backlight on PWM3 for backlight connector
    - Backlight via PCA9632 for RGB adapter

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -285,6 +285,7 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	imx6dl-sabresd-enetirq.dtb \
 	imx6dl-wandboard.dtb \
 	fsimx6dl-efusa9.dtb \
+	fsimx6dl-armstonea9.dtb \
 	imx6dl-wandboard-revb1.dtb \
 	imx6q-arm2.dtb \
 	imx6q-pop-arm2.dtb \
