--- a/arch/arm/configs/fsimx6_defconfig
+++ b/arch/arm/configs/fsimx6_defconfig
@@ -171,6 +171,7 @@ CONFIG_I2C_CHARDEV=y
 # CONFIG_I2C_HELPER_AUTO is not set
 CONFIG_I2C_ALGOPCF=m
 CONFIG_I2C_ALGOPCA=m
+CONFIG_I2C_GPIO=y
 CONFIG_I2C_IMX=y
 CONFIG_SPI=y
 CONFIG_SPI_IMX=y
@@ -232,6 +233,7 @@ CONFIG_SND=y
 # CONFIG_SND_USB is not set
 CONFIG_SND_SOC=y
 CONFIG_SND_SOC_FSL_ASRC=y
+CONFIG_SND_SOC_FSL_SSI=y
 CONFIG_SND_SOC_FSL_ESAI=y
 CONFIG_SND_IMX_SOC=y
 CONFIG_SND_SOC_IMX_SGTL5000=y
