--- a/arch/arm/boot/dts/fsimx6q-efusa9.dts
+++ b/arch/arm/boot/dts/fsimx6q-efusa9.dts
@@ -1,5 +1,5 @@
 /*
- * Copyright 2016 F&S Elektronik Systeme GmbH
+ * Copyright (C) 2016 F&S Elektronik Systeme GmbH
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License version 2 as
@@ -11,16 +11,30 @@
 // #define CONFIG_EFUSA9_REV110 // old board revision
 #define CONFIG_EFUSA9_REV121
 
+/* CONFIGURE 5V LVDS POWER SUPPLY */
+#ifdef CONFIG_EFUSA9_REV121
+/* With REV121 you can connect LVDS displays that need 5V.
+   Most displays run with 3.3V. Define the variable below to configure the
+   gpio used for switching to 5V. */
+//#define CONFIG_EFUSA9_5V_LVDS
+#endif
+
+
 /* ENABLE DISPLAYS */
 /* The following display config will be converted to Kconfig in the future */
+/* Keep the order, e.G. activating D0 and D3 but not D2 is not allowed */
 /* Define this if you have at least one display (D0) */
 #define CONFIG_EFUSA9_D0
 /* Define this if you have a second display (D1) */
 #define CONFIG_EFUSA9_D1
 /* Define this if you have a third display (D2) */
-#define CONFIG_EFUSA9_D2
+//#define CONFIG_EFUSA9_D2
 /* Define this if you have a fourth display (D3) */
 //#define CONFIG_EFUSA9_D3
+
+/* ENABLE BACKLIGHT LEVELS */
+/* enable 16 levels of backlight brightness with correct gamma */
+#define CONFIG_ARMSTONEA9_BL_LEVELS_16
 
 /* CONFIGURE DISPLAY 0 */
 #ifdef CONFIG_EFUSA9_D0
@@ -33,7 +47,7 @@
  * See the following files for possible values:
  *   LVDS: drivers/video/mxc/ldb.c
  *   LCD:  drivers/video/mxc/mxc_lcdif.c
- *   HDMI: drivers/video/mxc/mxc_hdmi.c (actually fetched from panel via EDID)
+ *   HDMI: drivers/video/fbdev/mxc/mxc_hdmi.c (actually fetched from panel via EDID)
  */
 #ifdef CONFIG_EFUSA9_D0_LCD
 	#define CONFIG_EFUSA9_D0_MODE_STR "LCD-ET070080"	// LCD
@@ -62,7 +76,7 @@
 
 /* CONFIGURE DISPLAY 2 */
 #ifdef CONFIG_EFUSA9_D2
-/* Activate exactly one entry for the type of display D0 */
+/* Activate exactly one entry for the type of display D2 */
 //#define CONFIG_EFUSA9_D2_LCD				// LCD
 //#define CONFIG_EFUSA9_D2_LVDS				// LVDS
 #define CONFIG_EFUSA9_D2_HDMI				// HDMI
@@ -80,8 +94,8 @@
 #ifdef CONFIG_EFUSA9_D3
 /* Activate exactly one entry for the type of display D3 */
 //#define CONFIG_EFUSA9_D3_LCD				// LCD
-//#define CONFIG_EFUSA9_D3_LVDS				// LVDS
-#define CONFIG_EFUSA9_D3_HDMI				// HDMI
+#define CONFIG_EFUSA9_D3_LVDS				// LVDS
+//#define CONFIG_EFUSA9_D3_HDMI				// HDMI
 /* Define a mode_str entry for display D3 (see comment for D0 above) */
 #ifdef CONFIG_EFUSA9_D3_LVDS
 	#define CONFIG_EFUSA9_D3_MODE_STR "LDB-WVGA"		// LVDS
@@ -92,31 +106,29 @@
 #endif
 #endif // CONFIG_EFUSA9_D3
 
-/* Do some settings to make configurations easier */
-#if defined(CONFIG_EFUSA9_D0_LCD) || defined(CONFIG_EFUSA9_D1_LCD) \
-	|| defined(CONFIG_EFUSA9_D2_LCD)|| defined(CONFIG_EFUSA9_D3_LCD)
-#define CONFIG_EFUSA9_LCD
-#endif
-#if defined(CONFIG_EFUSA9_D0_HDMI) || defined(CONFIG_EFUSA9_D1_HDMI) \
-	|| defined(CONFIG_EFUSA9_D2_HDMI) || defined(CONFIG_EFUSA9_D3_HDMI)
-#define CONFIG_EFUSA9_HDMI
-#endif
-
-#if defined(CONFIG_EFUSA9_D0_LVDS) || defined(CONFIG_EFUSA9_D1_LVDS) \
-	|| defined(CONFIG_EFUSA9_D2_LVDS)|| defined(CONFIG_EFUSA9_D3_LVDS)
-#define CONFIG_EFUSA9_LVDS
-//TODO, check multiscreen settings,  take care if e.g. D1 and D2 is LVDS etc....
-#if defined(CONFIG_EFUSA9_D0_LVDS) && defined(CONFIG_EFUSA9_D1_LVDS)
-#define CONFIG_EFUSA9_LVDS_MODE "sep1"
-#else
-
 /* CONFIGURE LVDS MULTIDISPLAY*/
-/* Two displays are used on LVDS, choose one of the modes below*/
-//#define CONFIG_EFUSA9_LVDS_MODE "sin0"	// Single-channel on LVDS0
-#define CONFIG_EFUSA9_LVDS_MODE "sin1"		// Single-channel on LVDS1
-//#define CONFIG_EFUSA9_LVDS_MODE "dul1"	// Clone mode
-//#define CONFIG_EFUSA9_LVDS_MODE "spl1"	// Dual-channel LVDS
+/* Two LVDS displays act as two independent displays (with two fb) by default.
+   Apart from this  can choose between dual-mode and split-mode */
+#if defined(CONFIG_EFUSA9_D0_LVDS) && defined(CONFIG_EFUSA9_D1_LVDS)
+/* one LVDS display per channel, one framebuffer for both */
+//#define CONFIG_EFUSA9_LVDS_DUAL_MODE
+/* two channels for 'split-mode-display', one framebuffer */
+//#define CONFIG_EFUSA9_LVDS_SPLIT_MODE
 #endif
+
+/* Do some settings to make configurations easier */
+#if defined(CONFIG_EFUSA9_D0_LCD) || defined(CONFIG_EFUSA9_D1_LCD) ||\
+    defined(CONFIG_EFUSA9_D2_LCD) || defined(CONFIG_EFUSA9_D3_LCD)
+#define CONFIG_EFUSA9_LCD // activates LCD node
+#endif
+#if defined(CONFIG_EFUSA9_D0_HDMI) || defined(CONFIG_EFUSA9_D1_HDMI) ||\
+    defined(CONFIG_EFUSA9_D2_HDMI) || defined(CONFIG_EFUSA9_D3_HDMI)
+#define CONFIG_EFUSA9_HDMI // activates HDMI node
+#endif
+
+#if defined(CONFIG_EFUSA9_D0_LVDS) || defined(CONFIG_EFUSA9_D1_LVDS) ||\
+    defined(CONFIG_EFUSA9_D2_LVDS) || defined(CONFIG_EFUSA9_D3_LVDS)
+#define CONFIG_EFUSA9_LVDS // activates LVDS node
 #endif
 
 /* HDMI */
@@ -124,6 +136,7 @@
 #define CONFIG_EFUSA9_HDMI_AUDIO
 #define CONFIG_EFUSA9_HDMI_CEC
 #endif
+
 
 /* TOUCH */
 /* Please select only one of the following touch devices. Make sure that the
@@ -139,20 +152,20 @@
 /* AUDIO */
 #define CONFIG_EFUSA9_SGTL5000_AUDIO
 
-/* ?? */
-#define CONFIG_EFUSA9_CAMERA_INTERFACE
+/* Camera connected */
+#define CONFIG_ARMSTONEA9_CAMERA_INTERFACE
 
 /* ?? */
 //#define CONFIG_EFUSA9_PARALLEL_INTERFACE
 
-/* SERIAL INTERFACE - MIPI CAMERA*/  
+/* SERIAL INTERFACE - MIPI CAMERA */
 #define CONFIG_EFUSA9_SERIAL_INTERFACE
 
 /* SD-CARD - A is micro SD; B is normalsize SD */
 #define CONFIG_EFUSA9_SD_A
 #define CONFIG_EFUSA9_SD_B
 
-/* EMMC*/
+/* EMMC */
 //#define CONFIG_EFUSA9_EMMC
 
 /* I2C */
@@ -185,33 +198,65 @@
 
 #ifdef CONFIG_EFUSA9_LVDS
 &ldb {
-	ipu_id = <0>;
-	sec_ipu_id = <0>;
-#ifdef CONFIG_EFUSA9_LCD
-	disp_id = <1>;
-	sec_disp_id = <0>;
+	ext_ref;
+#ifdef CONFIG_EFUSA9_LVDS_DUAL_MODE
+	 dual-mode;
+#endif
+#ifdef CONFIG_EFUSA9_LVDS_SPLIT_MODE
+	split-mode;
+#endif 
+
+#ifdef CONFIG_EFUSA9_D2 		// 3 or 4 displays
+#if defined(CONFIG_EFUSA9_LCD) && defined(CONFIG_EFUSA9_HDMI) &&\
+    !defined(CONFIG_EFUSA9_D3) 	// 3 displays: LCD, HDMI and LVDS
 	lvds-channel@0 {
-		crtc = "ipu1-di1";
+		crtc = "ipu2-di0";
+		reg = <0>;
+		status = "okay";
+	};
+#else	// remaining combinations with 3 or 4 displays
+	lvds-channel@0 {
+		crtc = "ipu2-di0";
+		reg = <0>;
+		status = "okay";
+	};
+	lvds-channel@1 {
+		crtc = "ipu2-di1";
+		reg = <1>;
+		status = "okay";
+	};
+
+#endif
+#else // 1 or 2 displays
+
+#ifdef CONFIG_EFUSA9_LCD		//if LCD is enabled too, LVDS uses di1
+	lvds-channel@0 {
+		crtc = "ipu1-di1"; 	//ipu1-di1 means ipu 0, di1
+		reg = <0>;
 		status = "okay";
 	};
 #else
-	disp_id = <0>;
-	sec_disp_id = <1>;
-	lvds-channel@0 {
+	lvds-channel@0 {		//default LVDS uses di0
 		crtc = "ipu1-di0";
+		reg = <0>;
 		status = "okay";
 	};
 #endif
+#ifdef CONFIG_EFUSA9_D1_LVDS		//if both LVDS channels are used
+	lvds-channel@1 {		//dual and split mode ignore this node
+		crtc = "ipu1-di1";
+		reg = <1>;
+		status = "okay";
+	};
+#endif
+#endif // 1 or 2 displays
 };
 #endif
 
 #ifdef CONFIG_EFUSA9_HDMI
 &hdmi_core {
-	ipu_id = <1>;
-	disp_id = <0>;
-#ifdef CONFIG_EFUSA9_D3_HDMI
-	disp_id = <1>; 
-#endif
+	ipu_id = <0>;
+	disp_id = <1>;
 	status = "okay";
 };
 #endif
@@ -225,13 +270,11 @@
 	status = "okay";
 };
 #endif
-
 #ifdef CONFIG_EFUSA9_D2
 &mxcfb2 {
 	status = "okay";
 };
 #endif
-
 #ifdef CONFIG_EFUSA9_D3
 &mxcfb3 {
 	status = "okay";
