--- a/arch/arm/boot/dts/fsimx6q-efusa9.dts
+++ b/arch/arm/boot/dts/fsimx6q-efusa9.dts
@@ -165,6 +165,9 @@
 #define CONFIG_EFUSA9_SD_A
 #define CONFIG_EFUSA9_SD_B
 
+/* SATA */
+#define CONFIG_EFUSA9_SATA
+
 /* EMMC */
 //#define CONFIG_EFUSA9_EMMC
 
@@ -196,6 +199,12 @@
 	compatible = "fus,imx6q-dma-apbh", "fus,imx28-dma-apbh";
 };
 
+#ifdef CONFIG_EFUSA9_SATA
+&sata{
+	status = "okay";
+};
+
+#endif
 #ifdef CONFIG_EFUSA9_LVDS
 &ldb {
 	ext_ref;
