Add device tree and improve defconfig for fsimx6 Solo/DualLite/Q armStoneA9R2
Makefile:
    - add device tree fsimx6q-armstonea9, fsimx6dl-armstonea9r2 and
      fsimx6q-armstonea9r2 to be build by fsimx6_defconfig
fsimx6_defconfig:
    - CONFIG_REGULATOR_GPIO: need for the LVDS supply-voltage. You can
      switch the supply-voltage between 3.3 V and 5.0 V
fsimx6dl-armstonea9r2 and fsimx6qdl-armstonea9r2:
        Device tree settings:
        - GPMI for NAND flash with F&S NAND driver and F&S APBH DMA
          driver
        - LVDS with 800x480 resolution (WVGA)
        - HDMI and HDMI audio register access with i2c1
        - v4l2_out for video overlays
          v4l2_cap_0 for serial camera interface
        - Audio with SGTL5000 on SSI1, register access with I2C1
        - Ethernet: 1GBit/s via RGMII
        - Serial ports on UART1 (port B), UART2 (port A), UART3 (port C)
	  UART4 (port D) and UART5 (port E)
        - can1 and can2
        - USB Device and USB Host
        - USDHC1 marvel WLAN chip, USDHC2 micro SD card, USDHC3 eMMC
        - I2C1 (port C) rtc (pca8565), I2C-flash, hdmi, sgtl5000,
          ov5640 MIPI, PCIe
        - I2C2 (port B) MXT224 (pcap touch), sx8654 (res. touch),
          FT5x06 (pcap touch)
        - I2C3 (port A) ADC
        - ECSPI1 for SPI-flash, ECSPI2 and ECSPI3 for user defined SPI
	  (spidev)
        - User PWM on PWM1, PWM2 and PWM4
        - PWM backlight on PWM3 for backlight connector

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -286,6 +286,7 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	imx6dl-wandboard.dtb \
 	fsimx6dl-efusa9.dtb \
 	fsimx6dl-armstonea9.dtb \
+	fsimx6dl-armstonea9r2.dtb \
 	imx6dl-wandboard-revb1.dtb \
 	imx6q-arm2.dtb \
 	imx6q-pop-arm2.dtb \
@@ -333,6 +334,8 @@ dtb-$(CONFIG_SOC_IMX6Q) += \
 	imx6q-udoo.dtb \
 	imx6q-wandboard.dtb \
 	fsimx6q-efusa9.dtb \
+	fsimx6q-armstonea9.dtb \
+	fsimx6q-armstonea9r2.dtb \
 	imx6q-wandboard-revb1.dtb
 dtb-$(CONFIG_SOC_IMX6SL) += \
 	imx6sl-evk.dtb \
