--- a/arch/arm/configs/fsimx6_defconfig
+++ b/arch/arm/configs/fsimx6_defconfig
@@ -189,6 +189,7 @@ CONFIG_MFD_DA9052_I2C=y
 CONFIG_REGULATOR=y
 CONFIG_REGULATOR_FIXED_VOLTAGE=y
 CONFIG_REGULATOR_ANATOP=y
+CONFIG_REGULATOR_GPIO=y
 CONFIG_REGULATOR_PFUZE100=y
 CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CAMERA_SUPPORT=y
