add CMA configuration to devicetrees of all boards
Add label (and in UL the entire device node) to the official dtsi files.
Make configuration accassible through macro.
Default cma-size is set to 320mb. Custom value can be set with the aid
of the macro.

--- a/arch/arm/boot/dts/fsimx6qdl-armstonea9.dtsi
+++ b/arch/arm/boot/dts/fsimx6qdl-armstonea9.dtsi
@@ -617,6 +617,14 @@
 };
 #endif // CONFIG_ARMSTONEA9_I2C_A
 
+/* RAM size for continues memory allocator */
+#ifndef CONFIG_EFUSA9_CMA_SIZE
+	#define CONFIG_EFUSA9_CMA_SIZE 0x14000000 //set 320mb as default
+#endif
+&cma {
+	size = <CONFIG_EFUSA9_CMA_SIZE>; 
+};
+
 #ifdef CONFIG_ARMSTONEA9_SGTL5000_AUDIO
 /* I2C_C (Bitbanging): RTC (PCA8565), SGTL5000 (SKIT) */
 &i2c_gpio {
