--- a/arch/arm/boot/dts/fsimx6sx-bema9x.dts
+++ b/arch/arm/boot/dts/fsimx6sx-bema9x.dts
@@ -8,6 +8,11 @@
 #define CONFIG_BEMA9X_BL_LEVELS_16
 #define CONFIG_EFUSA9X_CAPTOUCH_FT5x06
 
+/* CMA */
+/* activate the define below and set a custom value if you want to change the
+   RAM size of continues memory allocator from default 320mb. */
+//#define CONFIG_EFUSA9_CMA_SIZE 0x4000000 /* e.g. 0x4000000 is 64mb */
+
 /dts-v1/;
 
 #include "imx6sx.dtsi"
@@ -314,6 +319,14 @@ pwmleds {
 		};
 
 	};
+};
+
+/* RAM size for continues memory allocator */
+#ifndef CONFIG_EFUSA9_CMA_SIZE
+	#define CONFIG_EFUSA9_CMA_SIZE 0x14000000 //set 320mb as default
+#endif
+&cma {
+	size = <CONFIG_EFUSA9_CMA_SIZE>; 
 };
 
 &fec1 {
