--- a/arch/arm/boot/dts/fsimx6ul-efusa7ul.dts
+++ b/arch/arm/boot/dts/fsimx6ul-efusa7ul.dts
@@ -18,6 +18,12 @@
 //#define CONFIG_EFUSA7UL_CAPTOUCH_MXT224
 //#define CONFIG_EFUSA7UL_CAPTOUCH_FT5x06
 
+/* CMA */
+/* activate the define below and set a custom value if you want to change the
+   RAM size of continues memory allocator from default 320mb. */
+//#define CONFIG_EFUSA9_CMA_SIZE 0x4000000 /* e.g. 0x4000000 is 64mb */
+
+
 /dts-v1/;
 
 #include <dt-bindings/input/input.h>
@@ -181,6 +187,14 @@
 		board_name = "efusA7UL";
 		ecc_strength = "8";
 	};
+};
+
+/* RAM size for continues memory allocator */
+#ifndef CONFIG_EFUSA9_CMA_SIZE
+	#define CONFIG_EFUSA9_CMA_SIZE 0x14000000 //set 320mb as default
+#endif
+&cma {
+	size = <CONFIG_EFUSA9_CMA_SIZE>; 
 };
 
 &cpu0 {
