--- a/arch/arm/boot/dts/fsimx6dl-efusa9.dts
+++ b/arch/arm/boot/dts/fsimx6dl-efusa9.dts
@@ -106,6 +106,11 @@
 //#define CONFIG_EFUSA9_CAPTOUCH_MXT224
 //#define CONFIG_EFUSA9_CAPTOUCH_FT5x06
 
+/* CMA */
+/* activate the define below and set a custom value if you want to change the
+   RAM size of continues memory allocator from default 320mb. */
+//#define CONFIG_EFUSA9_CMA_SIZE 0x4000000 /* e.g. 0x4000000 is 64mb */
+
 /* NAND */
 #define CONFIG_EFUSA9_NAND
 
