--- a/arch/arm/boot/dts/fsimx6q-armstonea9r2.dts
+++ b/arch/arm/boot/dts/fsimx6q-armstonea9r2.dts
@@ -99,12 +99,16 @@
 #define CONFIG_ARMSTONEA9R2_HDMI_CEC
 #endif
 
-
 /* TOUCH */
 /* Please select only one of the following touch devices. Make sure that the
    corresponding touchscreen driver is activated in the kernel */
 //#define CONFIG_ARMSTONEA9R2_CAPTOUCH_MXT224
 //#define CONFIG_ARMSTONEA9R2_CAPTOUCH_FT5x06
+
+/* CMA */
+/* activate the define below and set a custom value if you want to change the
+   RAM size of continues memory allocator from default 320mb. */
+//#define CONFIG_EFUSA9_CMA_SIZE 0x4000000 /* e.g. 0x4000000 is 64mb */
 
 /* NAND */
 #define CONFIG_ARMSTONEA9R2_NAND
