--- a/arch/arm/boot/dts/fsimx6qdl-efusa9.dtsi
+++ b/arch/arm/boot/dts/fsimx6qdl-efusa9.dtsi
@@ -358,6 +358,15 @@ backlight_ldb {
 	};
 #endif 
 };
+
+/* RAM size for continues memory allocator */
+#ifndef CONFIG_EFUSA9_CMA_SIZE
+	#define CONFIG_EFUSA9_CMA_SIZE 0x14000000 //set 320mb as default
+#endif
+&cma {
+	size = <CONFIG_EFUSA9_CMA_SIZE>; 
+};
+
 #if defined(CONFIG_EFUSA9_SGTL5000_AUDIO) || \
 	defined(CONFIG_EFUSA9_HDMI_AUDIO)
 &audmux {
