--- a/arch/arm/boot/dts/fsimx6ul-cubea7ul.dts
+++ b/arch/arm/boot/dts/fsimx6ul-cubea7ul.dts
@@ -8,6 +8,11 @@
 
 #define CONFIG_CUBEA7UL_NAND
 
+/* CMA */
+/* activate the define below and set a custom value if you want to change the
+   RAM size of continues memory allocator from default 320mb. */
+//#define CONFIG_EFUSA9_CMA_SIZE 0x4000000 /* e.g. 0x4000000 is 64mb */
+
 /dts-v1/;
 
 #include <dt-bindings/input/input.h>
@@ -138,6 +143,14 @@
 		board_name = "cubeA7UL";
 		ecc_strength = "8";
 	};
+};
+
+/* RAM size for continues memory allocator */
+#ifndef CONFIG_EFUSA9_CMA_SIZE
+	#define CONFIG_EFUSA9_CMA_SIZE 0x14000000 //set 320mb as default
+#endif
+&cma {
+	size = <CONFIG_EFUSA9_CMA_SIZE>; 
 };
 
 &cpu0 {
