--- a/arch/arm/boot/dts/imx6q.dtsi
+++ b/arch/arm/boot/dts/imx6q.dtsi
@@ -88,7 +88,7 @@
 		ranges;
 
 		/* global autoconfigured region for contiguous allocations */
-		linux,cma {
+		cma: linux,cma {
 			compatible = "shared-dma-pool";
 			reusable;
 			size = <0x14000000>;
