--- a/arch/arm/boot/dts/fsimx6qdl-armstonea9.dtsi
+++ b/arch/arm/boot/dts/fsimx6qdl-armstonea9.dtsi
@@ -74,8 +74,10 @@
 			regulator-min-microvolt = <5000000>;
 			regulator-max-microvolt = <5000000>;
 			/* No way to switch USB1_OTG_VBUS power */
-			// gpio = <&gpio3 22 0>;
-			// enable-active-high;
+			//gpio = <&gpio3 22 0>;
+			//enable-active-high;
+			/* pmic */
+			//vin-supply = <&swbst_reg>;
 		};
 
 		reg_usb_h1_vbus: usb_h1_vbus {
@@ -84,8 +86,10 @@
 			regulator-min-microvolt = <5000000>;
 			regulator-max-microvolt = <5000000>;
 			/* No way to switch USB1_H1_VBUS power */
-			// gpio = <&gpio1 29 0>;
-			// enable-active-high;
+			//gpio = <&gpio1 29 0>;
+			//enable-active-high;
+			/* pmic */
+			//vin-supply = <&swbst_reg>;
 		};
 
 #ifdef CONFIG_ARMSTONEA9_SGTL5000_AUDIO
@@ -409,6 +413,15 @@
 };
 #endif
 
+/* if you want to use the pmic controller you have to set the arm-supply and
+ * the soc-supply to the regulator of the pmic. Look pfuze comment.*/
+#if 0
+&cpu0 {
+	arm-supply = <&sw1a_reg>;
+	soc-supply = <&sw1c_reg>;
+};
+#endif
+
 &clks {
 	assigned-clocks = <&clks IMX6QDL_CLK_PLL4_AUDIO_DIV>,
 			  <&clks IMX6QDL_CLK_SSI1_SEL>,
@@ -464,7 +477,8 @@
 	fsl,cpu_pupscr_sw = <0xf>;
 	fsl,cpu_pdnscr_iso2sw = <0x1>;
 	fsl,cpu_pdnscr_iso = <0x1>;
-	fsl,ldo-bypass = <1>; /* use ldo-bypass, u-boot will check it and configure */
+	/* more information how to ldo-bypass look at pfuze comment in i2c2 */
+	fsl,ldo-bypass = <0>; /* use ldo-bypass, u-boot will check it and configure */
 	fsl,wdog-reset = <1>; /* watchdog select of reset source */
 };
 
@@ -547,6 +561,116 @@
 		interrupt-parent = <&gpio1>;
 		interrupts = <28 IRQ_TYPE_EDGE_FALLING>;
 	};
+/* if you want to use pmic you have to set these regulators. But the pmic
+ * control register will be set by the UBoot so if you want use it you have to
+ * implement that the pmu_reg_core register will be set to "Power FET switched
+ * full on", because this set the bypass, so the pmic controlls the CPU.
+ */
+#if 0
+	pmic: pfuze100@08 {
+		compatible = "fsl,pfuze100";
+		reg = <0x08>;
+
+		regulators {
+			sw1a_reg: sw1ab {
+				regulator-min-microvolt = <300000>;
+				regulator-max-microvolt = <1875000>;
+				regulator-boot-on;
+				regulator-always-on;
+				regulator-ramp-delay = <6250>;
+			};
+
+			sw1c_reg: sw1c {
+				regulator-min-microvolt = <300000>;
+				regulator-max-microvolt = <1875000>;
+				regulator-boot-on;
+				regulator-always-on;
+				regulator-ramp-delay = <6250>;
+			};
+
+			sw2_reg: sw2 {
+				//regulator-min-microvolt = <800000>;
+				regulator-min-microvolt = <400000>;
+				regulator-max-microvolt = <3300000>;
+				regulator-boot-on;
+				regulator-always-on;
+				regulator-ramp-delay = <6250>;
+			};
+
+			sw3a_reg: sw3a {
+				regulator-min-microvolt = <400000>;
+				//regulator-max-microvolt = <1975000>;
+				regulator-max-microvolt = <3300000>;
+				regulator-boot-on;
+				regulator-always-on;
+			};
+
+			sw3b_reg: sw3b {
+				regulator-min-microvolt = <400000>;
+				//regulator-max-microvolt = <1975000>;
+				regulator-max-microvolt = <3300000>;
+				regulator-boot-on;
+				regulator-always-on;
+			};
+
+			sw4_reg: sw4 {
+				//regulator-min-microvolt = <800000>;
+				regulator-min-microvolt = <400000>;
+				regulator-max-microvolt = <3300000>;
+			};
+
+			swbst_reg: swbst {
+				regulator-min-microvolt = <5000000>;
+				regulator-max-microvolt = <5150000>;
+			};
+
+			snvs_reg: vsnvs {
+				regulator-min-microvolt = <1000000>;
+				regulator-max-microvolt = <3000000>;
+				regulator-boot-on;
+				regulator-always-on;
+			};
+
+			vref_reg: vrefddr {
+				regulator-boot-on;
+				regulator-always-on;
+			};
+
+			vgen1_reg: vgen1 {
+				regulator-min-microvolt = <800000>;
+				regulator-max-microvolt = <1550000>;
+			};
+
+			vgen2_reg: vgen2 {
+				regulator-min-microvolt = <800000>;
+				regulator-max-microvolt = <1550000>;
+			};
+
+			vgen3_reg: vgen3 {
+				regulator-min-microvolt = <1800000>;
+				regulator-max-microvolt = <3300000>;
+			};
+
+			vgen4_reg: vgen4 {
+				regulator-min-microvolt = <1800000>;
+				regulator-max-microvolt = <3300000>;
+				regulator-always-on;
+			};
+
+			vgen5_reg: vgen5 {
+				regulator-min-microvolt = <1800000>;
+				regulator-max-microvolt = <3300000>;
+				regulator-always-on;
+			};
+
+			vgen6_reg: vgen6 {
+				regulator-min-microvolt = <1800000>;
+				regulator-max-microvolt = <3300000>;
+				regulator-always-on;
+			};
+		};
+	};
+#endif
 	// adc
 };
 #endif // CONFIG_ARMSTONEA9_I2C_B
